--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -28,7 +28,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("com.h2database:h2")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.h2database:h2:1.4.197")
+    compile("com.h2database:h2:1.3.176")
     testCompile("junit:junit")
 }
 
